# ai_writer_PRO

./: .gitignore  DEPLOYMENT_SUMMARY.md  FINAL_FIXES_SUMMARY.md  FINAL_RENDER_STATUS.md  QUICK_START.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_ENV_VARS.md  RENDER_LEGACY_PLANS_FIXED.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env.example  render.yaml
.github/workflows/: backend.yml  e2e.yml  frontend.yml  security.yml
backend/: Dockerfile  alembic.ini  env.example  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_auth_tables.py  002_add_style_tables.py  003_add_content_tables.py  004_add_diff_lines_to_content_iterations.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: auth.py  content.py  files.py  health.py  oauth.py  organizations.py  styles.py  usage.py  users.py
backend/app/core/: auth.py  config.py  database.py  logging.py  oauth.py
backend/app/models/: __init__.py  api_usage.py  content_iteration.py  generated_content.py  organization.py  organization_member.py  reference_article.py  style_profile.py  user.py
backend/app/schemas/: __init__.py  auth.py  content.py  style.py  user.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  content_service.py  email_service.py  file_service.py  health_service.py  openai_service.py  style_service.py  text_extraction_service.py  usage_service.py  user_service.py
backend/app/tasks/: __init__.py  content_tasks.py  style_tasks.py
backend/app/templates/: __init__.py
backend/app/templates/prompts/: __init__.py  content_generation.py
backend/app/utils/: __init__.py  content_utils.py  file_utils.py  style_utils.py  usage_utils.py
backend/scripts/: dev.py  init_content_data.py  init_db.py
backend/tests/: conftest.py  test_api_integration.py  test_auth.py  test_content.py  test_content_utils.py  test_file_services.py  test_models.py  test_openai_service.py  test_services.py  test_styles.py  test_usage_service.py
backend/tests/fixtures/: sample.txt  sample_brief.txt
docker/postgres/: init.sql
frontend/: .dockerignore  .eslintrc.json  Dockerfile  cypress.config.ts  env.example  jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/cypress/e2e/: auth.cy.ts  content-management.cy.ts
frontend/cypress/fixtures/: content.json  large-file.txt  organizations.json  sample-article.txt  styles.json  users.json
frontend/cypress/support/: commands.ts  e2e.ts
frontend/src/: middleware.ts  test-utils.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx  (+1 more)
monitoring/: grafana-dashboard.json  prometheus.yml
performance/: locustfile.py
scripts/: backup.sh  deploy.sh  dev.bat  dev.sh  generate-docs.py  setup.bat  setup.sh
(+57 files in other folders)
